@@ -43,13 +43,20 @@ subprojects {
 
     dependencies {
         implementation("org.springframework.boot:spring-boot-starter")
+        implementation("com.googlecode.json-simple:json-simple:1.1.1")
         compileOnly("org.projectlombok:lombok")
         annotationProcessor("org.projectlombok:lombok")
         testImplementation ("org.springframework.boot:spring-boot-starter-test")
     }
 }
 
-
 tasks.named('test') {
     useJUnitPlatform()
+        testLogging {
+            events "passed", "skipped", "failed"
+            showStandardStreams = true
+    }
+    // 버전 업데이트 경고 로그 삭제를 위해 추가
+    jvmArgs += ["-XX:+EnableDynamicAgentLoading"]
+    systemProperty "spring.profiles.active", "local"
 }
